--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"@typescript-eslint/parser": "^2.29.0",
 		"eslint": "^6.8.0",
 		"minimist": ">=1.2.2",
+		"parcel-bundler": "^1.12.5",
 		"parcel-plugin-clean-easy": "^1.0.2",
 		"parcel-plugin-static-files-copy": "^2.4.3",
+		"tile-extruder": "^2.1.0",
 		"typescript": "^3.8.3"
 	},
 	"dependencies": {
